Criação das entidades dentro do dominio da aplicação.

--- a/Corretora.Domain/Corretora.Domain.csproj
+++ b/Corretora.Domain/Corretora.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Skender.Stock.Indicators" Version="2.4.0" />
+  </ItemGroup>
+
 </Project>
