--- a/Corretora.Web/Corretora.Web.csproj
+++ b/Corretora.Web/Corretora.Web.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Corretora.Application\Corretora.Application.csproj" />
+    <ProjectReference Include="..\Corretora.Repository\Corretora.Repository.csproj" />
+  </ItemGroup>
+
 </Project>
